--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "dependencies": {
     "@sawjan/teamup-client": "^1.1.0",
     "axios": "^0.27.2",
-    "dotenv": "^16.0.1"
+    "ddp": "^0.12.1",
+    "ddp-login": "^1.0.10",
+    "dotenv": "^16.0.1",
+    "ws": "^8.8.1"
   }
 }
